修正事故单看板模式页面的class命名

--- a/app/views/icm/incident_requests/kanban_index.html.erb
+++ b/app/views/icm/incident_requests/kanban_index.html.erb
@@ -12,7 +12,7 @@
 <% if allow_to_function?(:view_icm_kanban)%>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
-        <table class="toolsContent">
+        <table class="tools-content">
             <tbody>
                 <tr>
                   <td colspan="2">
