--- a/app/views/irm/business_objects/execute_test.js.erb
+++ b/app/views/irm/business_objects/execute_test.js.erb
@@ -1,3 +1,3 @@
-GY.use(function(Y){
-    Y.one("#executeTest").setContent("<%= escape_javascript(render("execute_result"))%>");
+$(function(){
+    $("#executeTest").html("<%= escape_javascript(render("execute_result"))%>");
 });
