--- a/app/views/irm/cards/edit.html.erb
+++ b/app/views/irm/cards/edit.html.erb
@@ -83,9 +83,7 @@
 <script type="text/javascript">
 function set_color(color)
 {
-    GY.use(function(Y){
-        Y.one("#selected_color").setAttribute("style", "background-color:" + color + ";height:14px;width:50px;display:inline-block;border:solid 1px #000000;");
-        Y.one("#background_color").set("value", color);
-    });
+        $("#selected_color").attr("style", "background-color:" + color + ";height:14px;width:50px;display:inline-block;border:solid 1px #000000;");
+        $("#background_color").val(color);
 }
 </script>
