--- a/app/views/irm/group_members/new_from_person.html.erb
+++ b/app/views/irm/group_members/new_from_person.html.erb
@@ -1,16 +1,15 @@
 <%= common_title(:action_meaning=>t(:label_action_new)) %>
 <script type="text/javascript">
-  GY.use(function(Y){
-      Y.on("irm:change",function(e){
-          if(e.details[2]=="Datatable"&&"supportGroupMembersDatatable"==e.details[0])
-            e.details[1].on("selectedChange",function(e){
-                var selected_code = "";
-                for(var i=0;i<e.details[0].length;i++)
-                  selected_code = selected_code + e.details[0][i].id +",";
-                Y.one("#irm_group_member_status_code").set("value",selected_code);
-            })
-      });
-  });
+  Ext.onReady(function(){
+      var setSelectedValue = function(selModel,selected){
+          var ids = [];
+          for(var i = 0;i<selected.length;i++){
+            ids.push(selected[i].data.id);
+          }
+          $("#irm_group_member_status_code").val(ids.join(","));
+      }
+      Ext.getCmp("supportGroupMembersDatatable").selModel.addListener("selectionchange",addMember);
+});
 </script>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
