--- a/app/views/irm/licenses/_new_form.html.erb
+++ b/app/views/irm/licenses/_new_form.html.erb
@@ -60,8 +60,8 @@
       <% next unless gfs[zone[:code]]&&gfs[zone[:code]].any?%>
       <% tr_count = 2%>
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody id="<%= zone[:code].downcase %>Group">
-          <tr>
+        <tbody>
+                  <tr>
             <td style="font-weight:bold;font-size:13px;padding:15px 0 0 15px"><%= zone[:name] %></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
@@ -73,6 +73,9 @@
                   <td class="dataCol"><%= check_box_tag 'select_all',"all" , false,{:ref=>"#{zone[:code].downcase}Group",:class=>"selectAll"} %></td>
                 </tr>
             <% end %>
+        </tbody>
+        <tbody id="<%= zone[:code].downcase %>Group">
+
             <tr>
             <% gfs[zone[:code]].each do |func| %>
                 <%= raw("</tr><tr>") if tr_count == 0 %>
@@ -107,11 +110,17 @@
 </div>
 <% end %>
 <script type="text/javascript">
-  GY.use("irm","node-base",function(Y){
-    Y.one("#selectableFunctions").delegate('click', function(e){
-       var checkbox = e.currentTarget;
-       var refFieldSet = checkbox.getAttribute("ref");
-       Y.one("#"+refFieldSet).all("input[type=checkbox]").set("checked",checkbox.get("checked"));
-    }, '.selectAll');
+  $(function(){
+      $("#selectableFunctions .selectAll").live('click', function(e){
+         var checkValue = $(e.currentTarget).attr("checked");
+         var refFieldSet =  $(e.currentTarget).attr("ref");
+         $("#"+refFieldSet).find("input[type=checkbox]").each(function(i,e){
+             if(checkValue)
+                 $(e).attr("checked",true)
+             else
+                 $(e).attr("checked",false)
+           })
+      });
+
   });
 </script>
