修正cascade select 的bug,同以同时级联多个target ,并在值列表中使用

--- a/app/views/irm/list_of_values/show.html.erb
+++ b/app/views/irm/list_of_values/show.html.erb
@@ -89,8 +89,8 @@
   $(function(){
        $("a[zone]").live("click",function(event){
            var me = $(this);
-           $(me.attr("zone")).load(m.attr("href"));
-
+           $(me.attr("zone")).load(me.attr("href"));
+           event.preventDefault()
        });
   });
 </script>
