--- a/app/views/icm/incident_requests/remove_exits_attachments.js.erb
+++ b/app/views/icm/incident_requests/remove_exits_attachments.js.erb
@@ -1,3 +1,3 @@
-GY.use('node', function(Y){
-    Y.one("#exist_attachments_list").set('innerHTML', '<%= escape_javascript(list_ir_existed_attachments(@incident_request))%>');
+$(function(){
+    $("#exist_attachments_list").html( '<%= escape_javascript(list_ir_existed_attachments(@incident_request))%>');
 });
