修正事故单添加watcher功能

--- a/app/views/irm/watchers/_sidebar_watcher_list.html.erb
+++ b/app/views/irm/watchers/_sidebar_watcher_list.html.erb
@@ -25,15 +25,11 @@
 
             <script type="text/javascript">
             function show_new_form() {
-                GY.use(function(Y){
-                    Y.one("#new_form").setStyle("display", "");
-                })
+                $("#new_form").css("display", "");
             }
 
             function hide_new_form() {
-                GY.use(function(Y){
-                    Y.one("#new_form").setStyle("display", "none");
-                })
+                $("#new_form").css("display", "none");
             }
             </script>
           <% end %>
