--- a/app/views/irm/watchers/_add_watcher.html.erb
+++ b/app/views/irm/watchers/_add_watcher.html.erb
@@ -18,25 +18,26 @@
 
 <script type="text/javascript">
   var counter = 0;
-  GY.use("node", function(Y){
-    Y.one("#add_to_watcher").on("click", function(e){
-        var person_id = Y.one("#watcher_lov").get("value");
-        var person_name = Y.one("#watcher_lovLabel").get("value");
 
-        var node = Y.Node.create('<div style="padding:5px 20px 0 20px;float:left;vertical-align:middle;" id="w_' + counter + '"><span>'
+
+
+  $(function(Y){
+    $("#add_to_watcher").on("click", function(e){
+        var person_id = $("#watcher_lov").val();
+        var person_name = $("#watcher_lovLabel").val();
+
+        var node = $('<div style="padding:5px 20px 0 20px;float:left;vertical-align:middle;" id="w_' + counter + '"><span>'
                 + person_name + '</span>'
                 + '<a href="javascript:void(0);" onclick="delete_w(' + counter + ')"><img class="btn_delete" src="/images/s.gif" title="<%= t(:delete)%>"/></a>'
                 + '<input type="hidden" name="cwatcher[' + person_id + ']" value=' + person_id + '></div>');
 
-        Y.one("#watcher_list").appendChild(node);
+        $("#watcher_list").append(node);
         counter ++ ;
     });
   });
 
   function delete_w(id)
   {
-      GY.use(function(Y){
-        Y.one("#w_" + id).remove();
-      });
+        $("#w_" + id).remove();
   }
 </script>
