--- a/public/themes/default/stylesheets/form.css
+++ b/public/themes/default/stylesheets/form.css
@@ -100,8 +100,15 @@ form .pbBottomButtons > table {border-top:1px solid #FFFFFF;padding:0 !important
 .wizard-block .dataCol{padding:2px 2px 2px 10px;text-align:left;}
 /*******************************************************/
 /*show page*/
-.page-block .detailList tr td,
-.page-block .detailList tr th{
-    border-bottom:1px solid #E3DEB8;
+.setupTab .page-block .detailList tr td,
+.setupTab .page-block .detailList tr th{
+    border-bottom:1px solid #ececec;
 }
+
+.lay-full .detail-block.page-block .detailList tr td,
+.lay-full .detail-block.page-block .detailList tr th{
+    border-bottom-width:0;
+}
+
+
 
