修正非IE浏览器下，DUAL 的SELECT控件高度压缩的问题

--- a/public/themes/default/stylesheets/form.css
+++ b/public/themes/default/stylesheets/form.css
@@ -70,7 +70,7 @@ body .detail-block tr td {border:0 none;}
 /*dual*/
 table.duel-select tr.duelList td {text-align: center;vertical-align: middle;}
 table.duel-select tr.duelList td.buttonCell {width: 0;}
-table.duel-select tr.duelList select {min-width: 180px; width:100%}
+table.duel-select tr.duelList select {min-width:180px; width:100%; height:100%;}
 div.actonType{float:left;}
 /*****************************************************/
 .wizard-block .detailList{width: 100%;}
