--- a/public/themes/default/stylesheets/container.css
+++ b/public/themes/default/stylesheets/container.css
@@ -474,3 +474,19 @@ body .wizard-block .pbBody .pbSubheader h3, body .wizard-block .bPageBlock .pbBo
     margin-bottom: 5px;
     margin-left: 0;
 }
+
+/*错误消息*/
+.wizard-block .detailList .errorMsg, .page-block .detailList .errorMsg {
+    padding-left:3px;
+}
+.errorStyle, .errorMsg, .importantWarning, .pbBody .errorStyle a, .pbBody .errorMsg a {
+    color:#D74C3B;
+}
+.page-block .detailList .error, .page-title .tagDropDown #tag_edit_error, .page-title .tagDropDown .tagDropDownContent .error, .tagRenameMenu .error, .inlineEditDiv .error, .inlineEditRequiredDiv .error {
+    border:2px solid #CC0000;
+}
+.pbError, .editListError {
+    color:#CC0000;
+    font-weight:bold;
+    text-align:center;
+}
