--- a/app/views/irm/lanes/index.html.erb
+++ b/app/views/irm/lanes/index.html.erb
@@ -23,7 +23,7 @@
             <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
         </div>
       </div>
-        <%= datatable("lane_list",url_for(:action=>"get_data"),
+        <%= datatable("lane_list",{:action=>"get_data"},
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
                    {:key=>"lane_code",:label=>t(:label_irm_lane_code),:width=>"100px"},
                    {:key=>"name",:label=>t(:name),:width=>"150px"},
