--- a/app/views/icm/incident_journals/edit_upgrade.html.erb
+++ b/app/views/icm/incident_journals/edit_upgrade.html.erb
@@ -93,6 +93,7 @@
               <td class="labelCol"><%= t(:label_icm_incident_journal_reply) %></td>
               <td class="dataCol" colspan="3" width="82%">
                 <%= sub_f.text_area :message_body ,:id=>"msgEditor",:value=>"   ",:jrequired=>true,:style=>"display:none;"%>
+                <%= rich_text_area("msgEditor",true) %>
               </td>
               <% end%>
             </tr>
