--- a/public/themes/default/stylesheets/public.ie6.css
+++ b/public/themes/default/stylesheets/public.ie6.css
@@ -53,6 +53,14 @@ h1, h2, h3, h4, h5, h6 {
 
 textarea {font-size: 100%;}
 
+pre {
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 .phHeader{width: 100%;}
 
 body .page-title .secondary-palette a, body .secondary-palette .lbHeader a, body .pbSubheader a {color: #015BA7;}
