--- a/app/views/irm/external_systems/show.html.erb
+++ b/app/views/irm/external_systems/show.html.erb
@@ -1,5 +1,12 @@
 <%= common_title(:show_data=>@external_system[:system_name]) %>
-
+<style type="text/css">
+  .unreal-hidden {
+    visibility:hidden;
+    position:absolute;
+    top:-2000px;
+    left:-2000px;
+  }
+</style>
 <div id="ep" class="detail-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -42,7 +49,7 @@
   </div>
 </div>
 
-<div class="listRelatedObject setupBlock" id="select_people" style="display:none;">
+<div class="listRelatedObject setupBlock unreal-hidden" id="select_people">
     <div class="page-block">
       <div class="pbHeader">
         <table cellpadding="0" cellspacing="0" border="0">
@@ -118,42 +125,45 @@
 </div>
 
 <script type="text/javascript">
-  GY.use(function(Y){
-      Y.on("irm:change",function(e){
-          if(e.details[2]=="Datatable"&&"selectablePeopleDatatable"==e.details[0])
-          {
-            e.details[1].on("selectedChange",function(e){
-                var selected_code = "";
-                for(var i=0;i<e.details[0].length;i++)
-                  selected_code = selected_code + e.details[0][i].id +",";
-                Y.one("#irm_external_system_person_status_code").set("value",selected_code);
-            });
-          }
-          else if(e.details[2]=="Datatable"&&"external_peopleDatatable"==e.details[0])
-          {
-            e.details[1].on("selectedChange",function(e){
-                var selected_code = "";
-                for(var i=0;i<e.details[0].length;i++)
-                  selected_code = selected_code + e.details[0][i].id +",";
-                Y.one("#irm_external_system_person_temp_id_string").set("value",selected_code);
-            });
-          }
-      });
-  });
+  Ext.onReady(function(){
 
+     $("#externalSystemId").change(function(e){
+         var url = decodeURIComponent($(e.target).attr("href"));
+         var externalSystemId = $(e.target).val();
+         url = url.replace("{external_system_id}",externalSystemId);
+         window.location = url;
+     });
+
+      var addMember = function(selModel,selected){
+          var ids = [];
+          for(var i = 0;i<selected.length;i++){
+            ids.push(selected[i].data.id);
+          }
+          $("#irm_external_system_person_status_code").val(ids.join(","));
+      }
+      Ext.getCmp("selectablePeopleDatatable").selModel.addListener("selectionchange",addMember);
+
+      var removeMember = function(selModel,selected){
+          var ids = [];
+          for(var i = 0;i<selected.length;i++){
+            ids.push(selected[i].data.id);
+          }
+          $("#irm_external_system_person_temp_id_string").val(ids.join(","));
+      }
+
+      Ext.getCmp("external_peopleDatatable").selModel.addListener("selectionchange",removeMember);
+
+  });
   function display_select_people(){
-      GY.use(function(Y){
-          Y.one("#select_people").setStyle("display", "block");
-          Y.one("#member_grid").setStyle("display", "none");
-          Y.one("#irm_external_system_person_temp_id_string").set("value","");
-      })
+      $("#select_people").removeClass("unreal-hidden");
+      Ext.getCmp("selectablePeopleDatatable").setWidth(Ext.get("selectablePeople").getComputedWidth());
+      $("#member_grid").addClass("unreal-hidden");
+      $("#irm_external_system_person_temp_id_string").val("");
   }
 
   function display_member_grid(){
-      GY.use(function(Y){
-          Y.one("#member_grid").setStyle("display", "block");
-          Y.one("#select_people").setStyle("display", "none");
-          Y.one("#irm_external_system_person_status_code").set("value","");
-      })
+      $("#select_people").addClass("unreal-hidden");
+      $("#member_grid").removeClass("unreal-hidden");
+      $("#irm_external_system_person_status_code").val("");
   }
 </script>
