修正用户查看自己登录记录的页面

--- a/app/views/irm/my_login_history/index.html.erb
+++ b/app/views/irm/my_login_history/index.html.erb
@@ -31,7 +31,7 @@
 
                        { :key => "logout_at", :label => t(:label_irm_login_record_logout_at) },
 
-                       ],{:row_perpage=>10,:paginator_box=>"historiesBox"})%>
+                       ],{:row_perpage=>10,:paginator_box=>"historiesBox",:html=>true})%>
         <div id="historiesBox"></div>
       </div>
     </div>
