--- a/app/views/skm/entry_headers/my_favorites.html.erb
+++ b/app/views/skm/entry_headers/my_favorites.html.erb
@@ -39,7 +39,7 @@
                    {:key=>"doc_number",:label=>t(:label_skm_entry_header_doc_number),:formatter=>"Y.irm.template", :width => "120px"},
                    {:key=>"entry_title",:label=>t(:label_skm_entry_header_title),:formatter=>"Y.irm.template"},
                    {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "180px"}
-                   ])%>
+                   ],{:html=>true})%>
       </div>
     </div>
 </div>
