添加错误页面

--- a/app/views/irm/navigations/access_deny.html.erb
+++ b/app/views/irm/navigations/access_deny.html.erb
@@ -1,3 +1,28 @@
-<div style="height:300px">
-  <h3 style="font-size: 400%;">Access deny</h3>
-</div>
+  <style type="text/css">
+
+  #bg, #bg table, #bg td {
+      height:100%;
+      width:100%;
+      overflow:hidden;
+  }
+
+
+
+  #bg div {width:100%;}
+
+  #bg td {text-align:center;vertical-align:middle;}
+
+  #bg img {margin:0 auto;min-height:50%;min-width:50%;}
+
+  </style>
+  <div id="bg">
+      <div>
+          <table cellspacing="0" cellpadding="0">
+              <tr>
+                  <td>
+                      <img src="images/access_deny.png" alt=""/>
+                  </td>
+              </tr>
+          </table>
+      </div>
+  </div>
