--- a/app/views/icm/incident_requests/_customer_list.html.erb
+++ b/app/views/icm/incident_requests/_customer_list.html.erb
@@ -14,14 +14,14 @@
         </div>
        <%= datatable("incident_requests",{:action=>"get_data",:format=>"json"},
                       [{:key=>"id",:label=>t(:operation),:hidden=>true,:width=>"50px"},
-                       { :key => "request_number", :label => t(:label_icm_incident_request_request_number_shot),:searchable=>true,:width=>"20px"},
+                       { :key => "request_number", :label => t(:label_icm_incident_request_request_number_shot),:searchable=>true,:width=>"35px"},
                        { :key => "title",:formatter=>"Y.irm.stemplate",:label => t(:label_icm_incident_request_title),:searchable=>true },
                        { :key => "incident_status_name",:hidden=>true },
                        { :key => "reply_flag",:hidden=>true },
                        { :key => "close_flag",:hidden=>true },
+                       { :key => "organization_name", :label => t(:label_icm_incident_request_organization)},
                        { :key => "last_response_date", :label => t(:label_icm_incident_request_last_date),:width=>"180px" },
-                       { :key => "organization_name", :label => t(:label_icm_incident_request_organization),:width=>"120px"},
-                       { :key => "external_system_name", :label => t(:label_irm_external_system),:width=>"100px" }
+                       { :key => "external_system_name", :label => t(:label_irm_external_system),:width=>"180px" }
                        ],{:export_data=>"#incidentRequestExport",:not_load=>true,:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:html=>true,:view_filter=>true})%>
       <div id="incidentRequestsPaginatorBox"></div>
 </div>
