--- a/public/themes/default/stylesheets/sidebar.css
+++ b/public/themes/default/stylesheets/sidebar.css
@@ -126,3 +126,11 @@ body .menuButton .menuButtonButton {
 {
     display: none;
 }
+/***********************incident request reply attachement sidebar************************************/
+div.fileInfo div.fileName{
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
