--- a/public/themes/default/stylesheets/sidebar.ie6.css
+++ b/public/themes/default/stylesheets/sidebar.ie6.css
@@ -129,3 +129,12 @@ body .menuButton .menuButtonButton {
     filter:alpha(opacity=0);
     -moz-opacity:0;
 }
+
+/***********************incident request reply attachement sidebar************************************/
+div.fileInfo div.fileName{
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
