--- a/app/views/irm/people/_edit_form.html.erb
+++ b/app/views/irm/people/_edit_form.html.erb
@@ -73,7 +73,7 @@
                <td class="labelCol">
                  <label><%=t(:label_irm_person_notification_flag)%></label>
                </td>
-               <td class="dataCol"><%=f.check_box :notification_flag,:checked => true%></td>
+               <td class="dataCol"><%=f.check_box :notification_flag%></td>
               <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
               <td class="dataCol">
                 <%=f.text_field :home_phone%>
