--- a/app/views/irm/wf_approval_processes/_ap_sumit_actions.html.erb
+++ b/app/views/irm/wf_approval_processes/_ap_sumit_actions.html.erb
@@ -19,11 +19,9 @@
                           </div>
                         </span>
                         <script type="text/javascript">
-                          GY.use("menubutton",function(Y){
-                            Y.on("domready",function(){
-                              new Y.MenuButton({menuNode:"#createApSubmitAction",dropAlign:["TL","BL"]});
-                            });
-                          });
+                              $(function(){
+                                  $("#createApRecallAction").menubutton();
+                              });
                         </script>
                     </div>
                 <% else %>
