--- a/app/views/irm/wf_approval_processes/index.html.erb
+++ b/app/views/irm/wf_approval_processes/index.html.erb
@@ -66,21 +66,21 @@
     </div>
 </div>
 <script type="text/javascript">
-  GY.use("substitute",function(Y){
-     Y.one("#newButton").on("click",function(e){
-      if(!e.target.getAttribute("thref"))
-        e.target.setAttribute("thref",e.target.getAttribute("href"))
-      var url = decodeURIComponent(e.target.getAttribute("thref"));
-      url = Y.Lang.substitute(url,{bo_code:Y.one("#boCode").get("value")});
-      e.target.setAttribute("href",encodeURI(url));
-
-     });
-
-     Y.one("#boCode").on("change",function(e){
-         var url = decodeURIComponent(e.target.getAttribute("href"));
-         var boCode = e.target.get("value");
-         url = Y.Lang.substitute(url,{bo_code:boCode});
+$(function(){
+    $("#substitute").click(function(e){
+        if(!$(e.target).attr("thref"))
+          $(e.target).attr("thref",$(e.target).attr("href"))
+        var url = decodeURIComponent($(e.target).attr("thref"));
+        url = url.replace("{bo_code}",$("#boCode").val());
+        $(e.target).attr("href",encodeURI(url));
+    });
+    $("#boCode").change(function(e){
+         var url = decodeURIComponent($(e.target).attr("href"));
+         var boCode = $(e.target).val();
+         url = url = url.replace("{bo_code}",boCode);
          window.location = url;
-     });
-  });
+    })
+});
+
+
 </script>
