--- a/app/views/irm/wf_approval_processes/_ap_step_reject_actions.html.erb
+++ b/app/views/irm/wf_approval_processes/_ap_step_reject_actions.html.erb
@@ -20,10 +20,8 @@
                         <% unless @wf_approval_process.enabled? %>
                             <span><a><%= t(:label_irm_wf_approval_add_actions)  %></a></span>
                             <script type="text/javascript">
-                              GY.use("menubutton",function(Y){
-                                Y.on("domready",function(){
-                                  new Y.MenuButton({menuNode:"#createApStepRejectAction<%= step_id%>",dropAlign:["TL","BL"]});
-                                });
+                              $(function(){
+                                  $("#createApRecallAction").menubutton();
                               });
                             </script>
                         <% else %>
