--- a/app/views/irm/wf_field_updates/_set_attribute_value.html.erb
+++ b/app/views/irm/wf_field_updates/_set_attribute_value.html.erb
@@ -62,35 +62,42 @@
   </table>
 </div>
 <script type="text/javascript">
-    GY.use("substitute","cascadeselect",function(Y){
-      Y.all("input.typeButton").on("click",function(e){
-        Y.all(".updateValueTR").setStyle("display","none");
-        Y.all(".updateValueTR .updateValue").setAttribute("disabled","true");
-        var showTR = Y.one(".updateValueTR[refValue="+e.target.get("value")+"]");
-        if(showTR){
-            showTR.setStyle("display","");
-            showTR.all(".updateValue").removeAttribute("disabled");
-        }
+  $(function(){
+      $("input.typeButton").click(function(e){
+          $(".showTR").css("display","none");
+          $(".showTR .updateValue").attr("disabled","true");
+          var showTR = $(".showTR[refValue="+$(e.target).val()+"]:first");
+          if(showTR){
+              showTR.css("display","");
+              showTR.find(".updateValue").removeAttr("disabled");
+          }
       });
-      Y.one("input.typeButton").simulate("click");
-      // formula editor
-      new Y.CascadeSelect({source: "#formula_function_type",target:["#formula_function"]});
-      Y.one("#formula_function").on("change",function(e){
-          var option = e.target.one("option[value="+e.target.get("value")+"]");
-          Y.one("#functionGuide").setContent(option.getAttribute("guide"));
-          Y.one("#functionsDescription").setContent(option.getAttribute("description"));
-      });
-      Y.one("#addFunction").on("click",function(e){
-        var guide = Y.one("#wf_field_update_formula_value").get("value")+" "+Y.one("#functionGuide").getContent()+" ";
-        Y.one("#wf_field_update_formula_value").set("value",guide);
-      });
-      Y.one("#formulaCheckSyntax").on("click",function(e){
-        if(!e.target.getAttribute("thref"))
-          e.target.setAttribute("thref",e.target.getAttribute("href"));
+      $.checkRadioButton("input.typeButton");
 
-        var href = Y.Lang.substitute(unescape(e.target.getAttribute("thref")),{formula_value:Y.one("#wf_field_update_formula_value").get("value")});
-        e.target.setAttribute("href",href);
+
+      $("#formula_function_type").cascade("#formula_function");
+
+      $("#formula_function").change(function(e){
+          var option = $(e.target).find("option[value="+e.target.get("value")+"]:first");
+          $("#functionGuide").html(option.attr("guide"));
+          $("#functionsDescription").html(option.attr("description"));
       });
-    });
+
+     $("#addFunction").click(function(e){
+          var guide = $("#wf_field_update_formula_value").val()+" "+$("#functionGuide").html()+" ";
+          $("#wf_field_update_formula_value").val(guide);
+      });
+
+      $("#formulaCheckSyntax").click(function(e){
+          if(!$(e.target).attr("thref"))
+              $(e.target).attr("thref",e.target.getAttribute("href"));
+
+
+          var href = decodeURIComponent($(e.target).attr("thref"));
+          href = href.replace("{formula_value}",$("#wf_field_update_formula_value").val())
+          $(e.target).attr("href",href);
+      });
+
+  });
 </script>
 <% end %>
